<resources>
    <string name="app_name">Library Manager</string>
    <string name="books">BOOKS</string>
    <string name="book_sn">Book SN</string>
    <string name="author_name">Author Name</string>
    <string name="copies">Copies</string>
    <string name="book_name">Book Name</string>
    <string name="add">Add</string>
    <string name="total">Total:</string>
    <string name="scanmessage">PRESS VOLUME UP TO OPEN FLASH</string>
    <string name="scantoast_s">Scan Succeed</string>
    <string name="scantoast_f">Scan Failed</string>
    <string name="delete_warning">Are you sure you want to delete :</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="deletebook">Delete Book</string>
    <string name="add_borrowing">Add Borrowing</string>
    <string name="close">Close</string>
    <string name="review">Review</string>
    <string name="today">\"Today: \"</string>
    <string name="expire">\"Exp_D: \"</string>
    <string name="borrower_name">Borrower Name</string>
    <string name="borrower_id">Borrower Id</string>
    <string name="finish">Finish</string>
    <string name="about">\"This application helps you manage the business of your library and add books and store them by feeding data or searching for the book on the Internet and also helps you in inventory books in a faster way by serial number \"</string>
</resources>