<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Insert_Screen"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="-8dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="52dp"
        android:hint="@string/author_name"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/author_name_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="310dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="288dp"
        android:hint="@string/copies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/book_copies_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="419dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="40dp"
        android:hint="@string/book_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/book_name_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="191dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/scan_n_bt"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/ic_baseline_document_scanner_24"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_sn_bt" />

    <ImageButton
        android:id="@+id/scan_sn_bt"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/ic_baseline_qr_code_scanner_24"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_bt"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:hint="@string/book_sn"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="84dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/sn_et"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="90dp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

