<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Borrow">

    <ImageButton
        android:id="@+id/scan_sn_bt2"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/ic_baseline_qr_code_scanner_24"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/scan_sn_bt4"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/ic_baseline_qr_code_scanner_24"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="52dp"
        android:hint="Borrower Id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/book_name_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="191dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="220dp"
        android:hint="@string/copies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/book_copies_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="419dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="140dp"
        android:hint="@string/book_sn"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sn_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="90dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_bt4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="56dp"
        android:hint="Borrower Name"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/author_name_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="310dp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>